--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,33 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.nblair</groupId>
 	<artifactId>pipeline</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>Pipeline</name>
 	<description>Pipeline is a module to make multi-step parallel workflows easier to implement.</description>
+
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+	<scm>
+		<connection>scm:git:git@github.com:nblair/pipeline.git</connection>
+		<developerConnection>scm:git:git@github.com:nblair/pipeline.git</developerConnection>
+		<url>https://github.com/nblair/pipeline</url>
+	</scm>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>https://www.apache.org/LICENSE-2.0</url>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<email>npblair@wisc.edu</email>
+			<name>Nicholas Blair</name>
+			<organization>University of Wisconsin-Madison</organization>
+		</developer>
+	</developers>
 
 	<properties>
 		<org.springframework.version>3.0.7.RELEASE</org.springframework.version>
@@ -31,6 +55,49 @@
 	</dependencies>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>com.mycila.maven-license-plugin</groupId>
+					<artifactId>maven-license-plugin</artifactId>
+					<version>1.9.0</version>
+					<configuration>
+						<basedir>${basedir}</basedir>
+						<header>short-header.txt</header>
+						<strictCheck>true</strictCheck>
+						<excludes>
+							<exclude>short-header.txt</exclude>
+							<exclude>README.md</exclude>
+							<exclude>LICENSE</exclude>
+							<exclude>NOTICE</exclude>
+							<exclude>NOTICE.template</exclude>
+							<exclude>.gitignore</exclude>
+						</excludes>
+					</configuration>
+					<executions>
+						<execution>
+							<id>check-license</id>
+							<phase>validate</phase>
+							<goals>
+								<goal>check</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.jasig.maven</groupId>
+					<artifactId>maven-notice-plugin</artifactId>
+					<version>1.0.5</version>
+					<configuration>
+						<noticeTemplate>${basedir}/NOTICE.template</noticeTemplate>
+						<licenseMapping>
+							<param>https://source.jasig.org/licenses/license-mappings.xml</param>
+						</licenseMapping>
+
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -39,15 +106,6 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.mycila.maven-license-plugin</groupId>
-				<artifactId>maven-license-plugin</artifactId>
-				<version>1.9.0</version>
-				<configuration>
-					<header>${basedir}/short-header.txt</header>
-					<strictCheck>true</strictCheck>
 				</configuration>
 			</plugin>
 		</plugins>
