--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.nblair</groupId>
 	<artifactId>pipeline</artifactId>
-	<version>0.2.0-RC1</version>
+	<version>0.2.0-RC2-SNAPSHOT</version>
 	<name>Pipeline</name>
 	<description>Pipeline is a module to make multi-step parallel workflows easier to implement.</description>
 
